--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -1,11 +1,68 @@
 .item-container {
-  margin: 0 auto;
-  width: 50%;
+  margin: 0 auto 20px auto;
+  width: 100%;
+  border: 1.5px solid rgb(216, 209, 209);
+  display: flex;
+  border-radius: 2px;
 }
+
+.item-container:hover {
+  transition: ease-in 0.1s;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.1);
+}
+
 .item-image {
-  width: 30%;
-  height: 30%;
+  /* border-right: 2px solid rgb(245, 245, 245); */
+  width: 15%;
+  height: 100%;
+  padding: 5px;
 }
 .item-image img {
   width: 100%;
+}
+
+.item-info {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  font-size: 13px;
+  color: rgb(158, 158, 158);
+  justify-content: flex-start;
+  margin-top: 25px;
+}
+
+.name {
+  font-size: 15px;
+}
+
+.bold {
+  color: black;
+  font-weight: 800;
+}
+
+.active {
+  color: rgb(255, 255, 255);
+  background-color: #080808;
+}
+
+.paused {
+  background-color: #d43a13;
+  color: rgb(241, 232, 227);
+}
+
+.status {
+  display: flex;
+  flex-direction: column;
+  margin: 0 15px 15px auto;
+  align-self: flex-end;
+  width: 30%;
+}
+
+.item-status {
+  padding: 4px 4px;
+  width: 40%;
+  text-align: center;
+  border-radius: 4px;
+  transition: 0.1s;
+  margin: 0 0 15px auto;
 }
