--- a/src/styles/SearchableInventory.css
+++ b/src/styles/SearchableInventory.css
@@ -25,7 +25,7 @@
 .reels {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  width: 65%;
 }
 
 .reels-header {
@@ -41,5 +41,6 @@
 }
 
 .no-item {
+  text-align: center;
   font-size: 40px;
 }
