--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -65,4 +65,9 @@
   border-radius: 4px;
   transition: 0.1s;
   margin: 0 0 15px auto;
+  transition: background-color 0.3s ease-out;
+}
+
+.item-status:target {
+  background-color: #d43a13;
 }
