--- a/src/styles/ProgressBar.css
+++ b/src/styles/ProgressBar.css
@@ -1,13 +1,3 @@
-/* .progress {
-  padding: 5px;
-  background: rgba(0, 0, 0, 0.6);
-  border-radius: 6px;
-  width: 75%;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25),
-    0 1px rgba(255, 255, 255, 0.08);
-  margin: 10px 0;
-} */
-
 .progress-bar {
   height: 8px;
   border-radius: 4px;
@@ -17,17 +7,26 @@
 
 .progress {
   background: #e9e5e2;
-  width: 75%;
+  width: 65%;
   padding: 4px;
   background-image: -webkit-gradient(
     linear,
     left top,
     left bottom,
     from(#fdfdfc),
-    to(#cecece)
+    to(#e2e2e2)
   );
   height: 16px;
   border-radius: 10px;
   box-shadow: 0 1px 0px rgba(95, 95, 95, 0.2) inset,
     1px 1px 2px rgba(95, 95, 95, 0.2);
+}
+
+@media (max-width: 400px) {
+  .progress-bar {
+    height: 5px;
+  }
+  .progress {
+    height: 13px;
+  }
 }
