--- a/src/styles/SortBy.css
+++ b/src/styles/SortBy.css
@@ -7,8 +7,36 @@
 }
 
 .sort-container {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   display: flex;
-  width: 50%;
+  width: 100%;
   margin-left: auto;
-  justify-content: space-around;
+  margin-bottom: 12px;
+  border-radius: 4px;
+  padding: 10px;
+  background-color: white;
+}
+
+.sort-container:hover {
+  transition: ease-in 0.1s;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.sort-container input[type='radio']:hover {
+  cursor: pointer;
+}
+
+.sort-buttons {
+  display: flex;
+}
+
+.sort-by-text {
+  margin: 0 10px 0 auto;
+}
+
+@media (min-width: 1250px) {
+  .sort-container {
+    width: 50%;
+  }
 }
