--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -1,9 +1,13 @@
 .item-container {
   margin: 0 auto 20px auto;
   width: 100%;
-  border: 1.5px solid rgb(216, 209, 209);
+
   display: flex;
   border-radius: 2px;
+  min-height: 140px;
+
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .item-container:hover {
@@ -11,13 +15,12 @@
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
-.item-image {
+.item-image-container {
   /* border-right: 2px solid rgb(245, 245, 245); */
   width: 15%;
-  height: 100%;
   padding: 5px;
 }
-.item-image img {
+.item-image-container img {
   width: 100%;
 }
 
@@ -29,6 +32,8 @@
   color: rgb(158, 158, 158);
   justify-content: flex-start;
   margin-top: 25px;
+  overflow: hidden;
+  height: 1%;
 }
 
 .name {
@@ -59,7 +64,7 @@
 }
 
 .item-status {
-  padding: 4px 4px;
+  padding: 0.5em 0.5em;
   width: 40%;
   text-align: center;
   border-radius: 4px;
@@ -70,4 +75,66 @@
 
 .item-status:target {
   background-color: #d43a13;
+}
+
+@media (max-width: 600px) {
+  .status {
+    width: 70%;
+  }
+  .item-image-container {
+    width: 65%;
+  }
+  .item-status {
+    width: 50%;
+    font-size: 12px;
+  }
+  .item-info {
+    margin-top: 5px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 412px) {
+  .item-info * {
+    font-size: 12px;
+  }
+  .item-image-container {
+    width: 45%;
+  }
+}
+
+@media (min-width: 319px) and (max-width: 400px) {
+  .item-info {
+    order: 2;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .name {
+    font-size: 14px;
+    position: absolute;
+    top: 10px;
+    left: 6px;
+  }
+  .item-image-container {
+    width: 30%;
+    order: 1;
+    z-index: 1;
+  }
+  .item-container {
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+  .status {
+    order: 3;
+    margin: 15px auto;
+    flex-direction: row;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+  }
+  .item-status {
+    position: relative;
+    right: -21px;
+  }
 }
