--- a/src/styles/SortBy.css
+++ b/src/styles/SortBy.css
@@ -15,12 +15,12 @@
   margin-bottom: 12px;
   border-radius: 4px;
   padding: 10px;
-  background-color: white;
 }
 
 .sort-container:hover {
   transition: ease-in 0.1s;
-  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 7px 14px rgba(94, 60, 140, 0.25),
+    0 2px 2px rgba(94, 60, 140, 0.1);
 }
 
 .sort-container input[type='radio']:hover {
